--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -26,13 +26,52 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+} */
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+} */
+body {
+  background-image: url('images/background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: scroll;
+  font-family: Arial, sans-serif;
+  color: #333;
+  height: 100vh;
+  margin-left: 5rem;
+  line-height: 1rem;
+}
+
+.nav {
+  color: #444b59;
+}
+
+.ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 2rem; /* Converted from 2% */
+}
+
+.li {
+  margin: 0 1rem; /* Converted from 0 1% */
+  padding: 0;
+}
+
+.footer {
+  background-color: #444b59;
+  height: 0.5rem; /* Converted from 1% */
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
