--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-} */
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 body {
   background-image: url('images/background.jpg');
   background-size: cover;
@@ -47,11 +10,9 @@ body {
   margin-left: 5rem;
   line-height: 1rem;
 }
-
 .nav {
   color: #444b59;
 }
-
 .ul {
   list-style-type: none;
   margin: 0;
@@ -61,12 +22,10 @@ body {
   align-items: center;
   height: 2rem; /* Converted from 2% */
 }
-
 .li {
   margin: 0 1rem; /* Converted from 0 1% */
   padding: 0;
 }
-
 .footer {
   background-color: #444b59;
   height: 0.5rem; /* Converted from 1% */
@@ -74,4 +33,42 @@ body {
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+.page-head {
+  font-size: 5rem; /* Converted from 500% */
+  font-family: 'Nunito', Arial, sans-serif;
+  color: #000f73;
+  margin-left: 1rem;
+}
+/* Input Styles */
+input[type="text"],
+input[type="password"] {
+  width: 20rem; /* Converted from 25% */
+  font-family: 'Overpass', Arial, sans-serif;
+  font-size: 0.875rem; /* Converted from 14px */
+  padding: 0.5rem; /* Converted from 8px */
+  border: 0.0625rem solid #789ade; /* Converted from 1px */
+  border-radius: 1rem; /* Converted from 100px */
+}
+
+button {
+  color: #444b59;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  text-decoration: underline;
+}
+
+/*buttons*/
+.sign-in-button {
+  background-color: #8699da; /* Change background color to purple */
+  color: white; /* Change text color to white */
+  font-weight: bold;
+  padding: 0.5rem 4rem; /* Increase padding for larger size */
+  font-size: 1.2rem; /* Increase font size for larger size */
+  border-radius: 5rem;
 }
